# torch-2dtm

./: .copier-answers.yml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/torch_2dtm/: __init__.py  cross_correlate.py  utils.py
tests/: test_torch_2dtm.py
